--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Qalam Learning"
 COMPANY_EMAIL=yyy@xxxx.com
 API_KEY=e7f566c7-a709-49a1-81c3-fecaf764b84e
-BASE_URL=https://api.qalamlearningapp.com
-API_URL=https://api.qalamlearningapp.com/api/v1
-TYPE=production
-APP_CONFIG=production
+BASE_URL=http://192.168.1.5:8080
+API_URL=http:/192.168.1.5:8080/api/v1
+TYPE=development
+APP_CONFIG=development
