--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native": "0.76.0",
     "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-config": "^1.5.3",
     "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.21.2",
