--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@refinedev/nestjsx-crud": "^5.0.10",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.7.9",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
